--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/styles/main.css">
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body >
@@ -45,7 +46,7 @@
 
              <div class="canvas-container">
 
-             <canvas id="electricityPricesChart" width="810" height="360" ></canvas>
+             <canvas id="electricityPricesChart" width="810" height="500" ></canvas>
          </div>
          </div>
          <div class="row justify-content-center bg-dark text-light p-4">
@@ -99,9 +100,17 @@
     </div>
 </div>
 
+
 <script src="/js/graphViewer.js"></script>
 
 <script src="/js/currentPriceViewer.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+
 </body>
 
 </html>
+<%- include("partials/footer.ejs") %>
