--- a/views/info.ejs
+++ b/views/info.ejs
@@ -16,10 +16,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/">Etusivu <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/info">Info <span class="sr-only">(current)</span></a>
             </li>
 
@@ -31,12 +31,13 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-lg-10">
+        <div class="col-lg-10"> 
 
 
 
         </div>
-        <div class="row justify-content-center bg-dark text-light p-4">
+        <!-- <div class="row justify-content-center bg-dark text-light p-4"> -->
+            <div class="row justify-content-center bg-dark p-4">    
             <div class="col-auto">
                 <!-- Text Sections Stacked Vertically -->
                 <div class="text-section">
@@ -85,5 +86,9 @@
     </div>
 </div>
 
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
