--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,4 @@
-</main>
 
-<footer>
-  <p>Copyright © <% new Date().getFullYear() %>></p>
+<footer style="text-align: center; padding: 20px;" >
+  <p style="color: white;">Copyright © <%- new Date().getFullYear() %></p>
 </footer>
-</body>
-
-</html>
