--- a/views/info.ejs
+++ b/views/info.ejs
@@ -85,7 +85,7 @@
         </div>
     </div>
 </div>
-
+<%- include("partials/footer.ejs") %>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
