Update head tag

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -7,6 +7,8 @@
      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
      <link rel="stylesheet" href="/styles/main.css">
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2346739354877546"
+     crossorigin="anonymous"></script>
 </head>
 <body >
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
