--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/styles/main.css">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2346739354877546"
+     crossorigin="anonymous"></script>
+     
 </head>
 <body >
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
